--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>all codes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="all__contents">
+        <div class="display">
+            <div class="display__h1">Dysplay:</div>
+            <div class="display__p">I am the best</div>
+        </div>
+        <div class="header">
+            <div class="header__logo white">logo</div>
+            <div class="header__space white"></div>
+            <div class="header__link white">link</div>
+            <div class="header__link white">link</div>
+            <div class="header__link white">link</div>
+            <div class="header__link white">link</div>
+        </div>
+        <div class="flexbox">
+            <div class="navbar">
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">1</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+                <div class="navbar__side">side</div>
+            </div>
+            <div class="content">
+                <div class="content__grid">
+                    <div class="content__piece">1</div>
+                    <div class="content__piece">2</div>
+                    <div class="content__piece">3</div>
+                    <div class="content__piece">4</div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
