--- a/index.html
+++ b/index.html
@@ -47,5 +47,63 @@
             </div>
         </div>
     </div>
+
+    <!-- начало рабыты с грид -->
+    <p class="gridtext">Grid</p>
+    <div class="gridbox">
+        <div class="gridbox__item item1">item1</div>
+        <div class="gridbox__item item2">item2</div>
+    </div>
+
+    <!-- работа с гридом над первой станицей -->
+    <div class="page">
+        <div class="page__header">My Website</div>
+        <div class="page__artbox">
+            <div class="page__aticles padbox">
+                <div class="hightext">Aticle 1</div>
+                <div class="page__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, earum! Ullam nesciunt similique in voluptatibus maxime nostrum voluptatem impedit odio.</div>
+                
+            </div>
+            <div class="page__aticles padbox">
+                <div class="hightext">Aticle 2</div>
+                <div class="page__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, earum! Ullam nesciunt similique in voluptatibus maxime nostrum voluptatem impedit odio.</div>
+                
+            </div>            
+        </div>
+        <div class="page__favbox">
+            <div class="page__favorites hightext padbox">Favorite 1</div>
+            <div class="page__favorites hightext padbox">Favorite 2</div>
+        </div>
+        <div class="page__postbox padbox">
+            <div class="page__posts padbox">
+                <div class="hightext">Related Posts</div>
+                <ul>
+                    <li>Element 1</li>
+                    <li>Element 2</li>
+                </ul>
+            </div>
+            <div class="page__posts padbox">
+                <div class="hightext">More Posts</div>
+                <ul>
+                    <li>Element 1</li>
+                    <li>Element 2</li>
+                    <li>Element 3</li>
+                </ul>
+            </div>
+        </div>
+        <div class="page__footer">©</div>
+    </div>
+
+    <!-- еще работа с гридом -->
+    <div class="griditem">
+        <div class="griditem__element1 gridel">Element 1</div>
+        <div class="griditem__element2 gridel">Element 2</div>
+        <div class="griditem__element3 gridel">Element 3</div>
+    </div>
+
+    <!-- еще тренировки с гридом -->
+    <!-- <div class="gridcontainer">
+        .gridcontainer__item
+    </div> -->
 </body>
 </html>
