--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
     </div>
 
     <!-- еще тренировки с гридом -->
-    <!-- <div class="gridcontainer">
-        .gridcontainer__item
-    </div> -->
+    <div class="gridcontainer">
+        <div class="gridcontainer__item1 gridelement">One</div>
+        <div class="gridcontainer__item2 gridelement">Two</div>
+        <div class="gridcontainer__item3 gridelement">Three</div>
+        <div class="gridcontainer__item4 gridelement">Four</div>
+        <div class="gridcontainer__item5 gridelement">Five</div>
+    </div>
 </body>
 </html>
